--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,10 @@
-<h1>Hello world</h1>
+{% extends 'base.html' %}
+{% block head %}
+<title>index</title>
+{% endblock %}
+{% block body %}
+<h1 id="txt">hello</h1>
+<button id="but" onclick="hai()" type="submit">hello</button>
+<h1>{{task}}{{hai}}</h1>
+<img id="img" src="{{ url_for('static', filename='images/image8.png') }}" alt="" />
+{% endblock %}
